# kindr

./: CMakeLists.txt  package.xml
cmake/: cmake_uninstall.cmake.in  kindrConfig.cmake.in
doc/doxygen/: CMakeLists.txt
include/kindr/quaternions/: Quaternion.hpp
test/: CMakeLists.txt  run_tests.py
